Fixed image and link overflow issue

--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -233,7 +233,7 @@ p code, li code {
   }
 }
 
-.mathbox{
+.scrollbox{
   overflow-x: auto;
   overflow-y: hidden;
 }
